// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <CenteredLogo />
  <Panel
    accent={true}
    sectioned={true}
    title="Log In"
  >
    <Connect(ReduxForm)
      onSubmit={[Function]}
      ssoEnabled={false}
    />
  </Panel>
  <Panel.Footer
    left={false}
    right={
      <small>
        <PageLink
          to="/forgot-password"
        >
          Forgot your password?
        </PageLink>
      </small>
    }
  />
</div>
`;

exports[`renders correctly when there is a login error 1`] = `
<div>
  <CenteredLogo />
  <Panel
    accent={true}
    sectioned={true}
    title="Log In"
  >
    <Error
      error="uh oh!"
    />
    <Connect(ReduxForm)
      onSubmit={[Function]}
      ssoEnabled={false}
    />
  </Panel>
  <Panel.Footer
    left={false}
    right={
      <small>
        <PageLink
          to="/forgot-password"
        >
          Forgot your password?
        </PageLink>
      </small>
    }
  />
</div>
`;

exports[`should display sso error message 1`] = `
<div>
  <CenteredLogo />
  <Panel
    accent={true}
    sectioned={true}
    title="Log In"
  >
    <Error
      error="Oh no!"
    />
    <Connect(ReduxForm)
      onSubmit={[Function]}
      ssoEnabled={false}
    />
  </Panel>
  <Panel.Footer
    left={false}
    right={
      <small>
        <PageLink
          to="/forgot-password"
        >
          Forgot your password?
        </PageLink>
      </small>
    }
  />
</div>
`;

exports[`should display tfa form when TFA is enabled 1`] = `
<div>
  <CenteredLogo />
  <Panel
    accent={true}
    sectioned={true}
    title="Log In"
  >
    <Connect(ReduxForm)
      onSubmit={[Function]}
    />
  </Panel>
</div>
`;
